cluster/overlays/dashboard/route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: release-name-traefik-dashboard
  namespace: traefik

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`traefik.home`) && PathPrefix(`/dashboard`) || Host(`traefik.home`) && PathPrefix(`/api`)
      services:
        - kind: TraefikService
          name: api@internal
